@@ -150,6 +150,8 @@ namespace Orthanc
     void ApplyCreateImage(_OrthancPluginService service,
                           const void* parameters);
 
+    void ApplyLookupDictionary(const void* parameters);
+
     void ComputeHash(_OrthancPluginService service,
                      const void* parameters);
 
